--- a/components.css
+++ b/components.css
@@ -3,10 +3,10 @@
 .bgContainer {
     width: 100%;
     height: 100%;
-    object-fit: cover;
     z-index: -1;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .topBg {
@@ -36,12 +36,26 @@
     display: block;
 }
 
+.iconBox img {
+    margin: 0 auto;
+}
+
 
 /* --- CONTAINER WITH BIG IMAGE BG AND MINUS MARGIN --- */
 .bigBg {
     margin: -150px 0;
     min-height: 100vh;
     height: auto;
+}
+
+.bigBgContent > * > .iconBox p {
+    margin: 0;
+    padding: 0;
+}
+
+.bigBgContent > * > .iconBox {
+    margin: 25px 0;
+    padding: 0;
 }
 
 .bigBgContent {
@@ -59,10 +73,16 @@
     grid-column: 1 / span 2;
 }
 
-.bigBgWrapper2 {
-    grid-row: 4;
+.bigBgWrapper2Right {
+    grid-row: 4 / span 2;
     grid-column: 2 / span 2;
 }
+
+.bigBgWrapper2Left {
+    grid-row: 3 / span 2;
+    grid-column: 1 / span 2;
+}
+
 /* --- CUSTOM CONTAINERS --- */
 
 .overlapLeft {
@@ -126,25 +146,26 @@
     align-items: center;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(6, 225px);
+    margin: 150px auto 0 auto;
 }
 
 .photoCollage > div {
     overflow: hidden;
-    min-height: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .photoCollage > div:nth-child(1) {
     grid-row: 1 / span 2;
     grid-column: 2 / span 3;
-    overflow: hidden;
-    min-height: 100%;
-    max-height: 100%;
+    z-index: 5;
 }
 
 .photoCollage > div:nth-child(2) {
     grid-row: 1 / span 6;
-    grid-column: 5 / span 4;
+    grid-column: 6 / span 4;
+    display: grid;
+    align-content: center;
 }
 
 .photoCollage > div:nth-child(3) {
@@ -158,8 +179,12 @@
 }
 
 .photoCollage > div > img {
+    min-height: 100%;
     object-fit: cover;
+    width: 100%;
+    max-height: 100%;
 }
+
 /* --- grids --- */
 
 .grid4col {
