--- a/components.css
+++ b/components.css
@@ -31,9 +31,9 @@
     grid-template-columns: 50px 1fr;
 }
 
-.iconBox > div > * {
-    margin: 0 0 30px 0;
+.iconBox > div > span {
     display: block;
+    margin: 0 0 30px 0;
 }
 
 .iconBox img {
@@ -90,6 +90,7 @@
     min-height: 600px;
     margin: 150px auto;
     display: grid;
+    grid-gap: 50px;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, auto);
     align-items: center;
@@ -120,6 +121,7 @@
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, auto);
     align-items: center;
+    grid-gap: 50px;
 }
 
 .overlapRight > img {
@@ -200,9 +202,262 @@
     width: 100%;
     height: 400px;
     overflow: hidden;
-    margin: 0 0 20px 0;
 }
 
 .grid4col > div > * {
     margin-top: 30px;
+}
+
+/* --- MEDIA QUERIES --- */
+@media all and (max-width: 1420px) {
+    .overlapLeft, .overlapRight, .grid4col, .photoCollage, .bigBgContent, footer { 
+    grid-gap: 30px;
+}
+
+    #homeTitle {
+        grid-row: 2;
+        grid-column: 1 / span 3;
+        text-align: center;
+    }
+
+    .topBg .iconBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .topBg .iconBox img {
+        margin: 0 auto 30px 0;
+    }
+
+    .overlapLeft > div {
+        grid-column: 4 / span 3;
+    }
+
+    .overlapRight > div {
+        grid-column: 1 / span 3;
+    }
+
+    .bigBgContent {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 150px 1fr 150px;
+        align-items: center;
+        padding: 300px 50px 300px 0;
+    }
+
+    .bigBgWrapper1 {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .bigBgWrapper2Right {
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .photoCollage {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .photoCollage > div:nth-child(1) {
+        grid-row: 1;
+        grid-column: 1;
+    }
+    
+    .photoCollage > div:nth-child(2) {
+        grid-row: 1;
+        grid-column: 2;
+    }
+    
+    .photoCollage > div:nth-child(3) {
+        grid-row: 2;
+        grid-column: 1;
+    }
+    
+    .photoCollage > div:nth-child(4) {
+        grid-row: 2;
+        grid-column: 2;
+    }
+    
+    .photoCollage > div > img {
+        min-height: 100%;
+        object-fit: cover;
+        width: 100%;
+        max-height: 100%;
+    }
+}
+
+@media all and (max-width: 1300px) {
+    footer {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    footer > div {
+        margin-bottom: 50px;
+    }
+}
+
+@media all and (max-width: 1000px) {
+    .overlay, .overlayDark, .contentWrapper {
+        padding: 0;
+    }
+
+    .bodyWrapper {
+        padding: 0 20px;
+    }
+
+    .bigBgContent {
+        padding: 300px 20px;
+    }
+
+    .menu {
+        width: 100%;
+        background-color: #202431;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        padding: 0 20px;
+    }
+
+    #mobileMenu {
+        display: block;
+    }
+
+    nav {
+        display: none;
+    }
+}
+
+@media all and (max-width: 800px) {
+    h1 {
+        font-size: 3.75em;
+    }
+    
+    h2 {
+        font-size: 2em;
+    }
+    .bigBgContent {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bigBgContent div {
+        margin: 0 auto 150px auto;
+    }
+
+    .photoCollage {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .photoCollage > div:nth-child(1) {
+        grid-row: 1;
+        grid-column: 1 / span 2;
+    }
+    
+    .photoCollage > div:nth-child(2) {
+        grid-row: 2;
+        grid-column: 1 / span 2;
+    }
+    
+    .photoCollage > div:nth-child(3) {
+        grid-row: 3;
+        grid-column: 1;
+    }
+    
+    .photoCollage > div:nth-child(4) {
+        grid-row: 3;
+        grid-column: 2;
+    }
+    
+    .photoCollage > div > img {
+        min-height: 100%;
+        object-fit: cover;
+        width: 100%;
+        max-height: 100%;
+    }
+
+    .bigBgWrapper2Left {
+        width: 100%;
+        padding: 0;
+    }
+
+    .bigBgWrapper2Left > form > div {
+        margin: 0;
+    }
+
+}
+
+@media all and (max-width: 600px) {
+    .centered {
+        text-align: left;
+    }
+
+    .hideOnMobile {
+        display: none!important;
+    }
+
+    .topBg .iconBox {
+        grid-column: 1 / span 3;
+    }
+
+    .overlapLeft, .overlapRight {
+        grid-template-rows: 315px auto;
+        grid-template-columns: 1fr;
+    }
+
+    .overlapLeft > img, .overlapRight > img {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .overlapLeft > div, .overlapRight > div {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    footer {
+        margin-top: 50px;
+        grid-template-columns: 1fr;
+    }
+}
+
+@media all and (max-width: 400px) {
+    .photoCollage {
+        grid-template-rows: 1fr 1fr 150px 150px
+    }
+
+    .photoCollage > div:nth-child(3) {
+        grid-column: 1 / span 2;
+        grid-row: 3;
+    }
+
+    .photoCollage > div:nth-child(4) {
+        grid-column: 1 / span 2;
+        grid-row: 4;
+    }
+
+    form {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .messageField {
+        grid-column: 1;
+    }
+    
+}
+/* --- MEDIA QUERIES FOR BASIC GRID ELEMENTS --- */
+@media all and (max-width: 1420px) {
+    .grid4col {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media all and (max-width: 600px) {
+    .grid4col {
+        grid-template-columns: 1fr;
+    }
 }
