--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {
     background: rgba(32, 36, 49, 0.5);
 }
 
+#mobileMenu {
+    display: none;
+}
+
 nav > a {
     margin-top: 30px;
     margin-right: auto;
@@ -96,6 +100,10 @@ p {
     justify-content: center;
 }
 
+.centeredForced {
+    /* stays centered even on mobile */
+    text-align: center;
+}
 .buttonWithIcon {
     font-size: 1.1em;
     font-family: "Inter-Bold";
@@ -120,7 +128,7 @@ p {
 }
 
 .bodyWrapper {
-    padding: 0 50px 0 350px;
+    padding: 0 30px 0 350px;
 }
 
 .contentWrapper {
@@ -198,10 +206,6 @@ footer .iconBox {
     align-items: center;
 }
 
-footer p {
-    margin: 0;
-}
-
 .socialRow {
     display: flex;
     flex-direction: row;
@@ -209,3 +213,4 @@ footer p {
     margin: 150px auto 50px auto;
     justify-content: space-around;
 }
+
