--- a/components.css
+++ b/components.css
@@ -313,20 +313,52 @@
     }
 
     .menu {
-        width: 100%;
         background-color: #202431;
-        height: 70px;
-        display: flex;
         align-items: center;
-        padding: 0 20px;
+        z-index: 85;
+        transition: .3s ease-in-out;
+        height: 100vh;
+        width: 0;
+        position: fixed;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        overflow-x: hidden;
     }
+
+    #closeMobileMenu {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        cursor: pointer;
+        display: block;
+      }
 
     #mobileMenu {
         display: block;
+        cursor: pointer;
+    }
+
+    #mobileMenuWrapper {      
+        background-color: #202431;
+        height: 70px;
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        z-index: 7;
     }
 
     nav {
-        display: none;
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav a {
+        margin: 0 auto 0 80px;
+    }
+
+    #subMenu {
+        margin: 0 auto 0 100px;
     }
 }
 
