--- a/components.css
+++ b/components.css
@@ -334,7 +334,7 @@
         display: block;
       }
 
-    #mobileMenu {
+    #openMobileMenu {
         display: block;
         cursor: pointer;
     }
