--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@
 
 .appMenuIcon {
     z-index: 98;
-    position: absolute;
+    position: fixed;
     top: 20px;
     left: 20px;
 
@@ -34,7 +34,7 @@
     width: 26%;
     min-width: 300px;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     padding: 68px 0 20px 0;
@@ -83,7 +83,7 @@
     width: 100%;
 }
 
-.appWrapper > h2:nth-child(1) {
+.appWrapper > h2, #popular > h2:nth-child(1), #activities > h2:nth-child(1), #suggestions > h2:nth-child(1) {
     margin-top: 150px;
 }
 
@@ -103,7 +103,101 @@
 .dropdownWrapper {
     max-width: 900px;
     margin: 50px auto;
-    position: relative;
+}
+
+.dropdownWrapper > label {
+    color: white;
+    text-align: center;
+    display: block;
+}
+
+.dropdownWrapper > select {
+    width: 100%;
+    height: 55px;
+    font-family: "Inter-Bold";
+    color: #202431;
+    margin: 0 auto;
+    text-indent: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("img/icons/down-blue.png");
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+
+.dropdownWrapper > option {
+    text-indent: 20px;
+}
+
+/* --- POPULAR --- */
+.itemWrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 50px auto;
+}
+
+.item {
+    background: white;
+    padding: 30px 20px;
+}
+
+.addToListBtn {
+    height: 45px;
+    color: #202431;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    text-transform: none;
+}
+
+.addToListBtn > .fas {
+    color: #3C957A;
+    font-size: 1.5em;
+    margin: 0 15px 0 0;
+}
+
+.item > img {
+    max-width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.item > h3 {
+    color: #202431;
+    text-transform: none;
+    margin: 30px 0;
+}
+
+.item > p {
+    margin-bottom: 30px;
+    color: #8D8D8D;
+}
+
+.item > .greenBtn {
+    width: auto;
+    padding: 0 28px;
+    color: white;
+    margin: 0;
+}
+
+.activityBtn {
+    height: 75px;
+    width: 100%;
+    background: white;
+    color: #202431;
+    font-size: 1em;
+    padding: 0 0 0 20px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+}
+
+.activityBtn > .fas {
+    font-size: 2em;
+    margin: 0 15px 0 0;
 }
 
 @media all and (max-width: 1150px) {
