--- a/app.css
+++ b/app.css
@@ -79,7 +79,7 @@
 /* ---- APP STUFF --- */
 
 .appWrapper, .appHero {
-    padding: 0 30px 0 26%;
+    padding: 0 30px 0 28%;
     width: 100%;
 }
 
@@ -94,6 +94,7 @@
     justify-content: center;
     background-image: url("img/app-banner.png");
     background-size: cover;
+    background-position: bottom center;
 }
 
 .appHero > h1 {
@@ -107,7 +108,6 @@
 
 .dropdownWrapper > label {
     color: white;
-    text-align: center;
     display: block;
 }
 
@@ -160,7 +160,7 @@
 }
 
 .item > img {
-    max-width: 100%;
+    width: 100%;
     height: 150px;
     object-fit: cover;
 }
@@ -177,9 +177,6 @@
 }
 
 .item > .greenBtn {
-    width: auto;
-    padding: 0 28px;
-    color: white;
     margin: 0;
 }
 
@@ -195,13 +192,103 @@
     align-items: center;
 }
 
+.activityBtn:hover {
+    background-color: var(--lightgreen);
+}
+
 .activityBtn > .fas {
     font-size: 2em;
     margin: 0 15px 0 0;
+}
+
+@media all and (max-width: 1305px) {
+    .itemWrapper {
+        grid-template-columns: 1fr 1fr 1fr;;
+    }
 }
 
 @media all and (max-width: 1150px) {
     .appWrapper, .appHero {
         padding: 0 30px 0 350px;
     }
+
+    .itemWrapper {
+        grid-template-columns: 1fr 1fr;
+    }
 }
+
+@media all and (max-width: 900px) {
+    .bucketlistWrapper {
+        width: 100%;
+        height: 70px;
+        overflow: hidden;
+        padding: 25px 0;
+        transition: .3s ease-in-out;
+    }
+
+    .bucketlistWrapper > h3 {
+        text-align: center;
+    }
+    .bucketlistWrapper > h3 > .fas {
+        margin: 0 0 0 15px;
+        font-size: 1em;
+        cursor: pointer;
+    }
+
+    .openBucketlist {
+        animation: openBucketlist .5s forwards;
+        transition: .3s ease-in-out;
+    }
+
+    @keyframes openBucketlist {
+        100% {
+            height: 100vh;
+        }
+    }
+
+    .closeBucketlist {
+        animation: closeBucketlist 1s forwards;
+        transition: .3s ease-in-out;
+    }
+
+    @keyframes closeBucketlist {
+        100% {
+            height: 70px;
+        }
+    }
+
+    .rotated {
+        animation: rotate .5s forwards;
+        transition: ease-in-out;
+    }
+
+    @keyframes rotate {
+        100% {
+            transform: rotate(180deg);
+        }
+    }
+
+    .appHero {
+        margin-top: 70px;
+    }
+    .appHero, .appWrapper {
+        padding: 20px;
+    }
+
+    .appHero > h1 {
+        font-size: 3em;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .itemWrapper {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media all and (max-width: 450px) {
+    .appHero > h1 {
+        font-size: 2em;
+    }
+}
+
