--- a/components.css
+++ b/components.css
@@ -33,6 +33,12 @@
     grid-column: 1 / span 3;
 }
 
+#subpageTitle {
+    grid-row: 2;
+    grid-column: 1 / span 3;
+    text-align: center;
+}
+
 .iconBox {
     grid-row: 4;
     display: grid;
@@ -211,6 +217,13 @@
     object-fit: cover;
     width: 100%;
     height: 400px;
+    overflow: hidden;
+}
+
+.grid4col > div > img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
