--- a/components.css
+++ b/components.css
@@ -39,6 +39,16 @@
     text-align: center;
 }
 
+#contactIcons > .iconBox {
+    display: flex;
+    align-items: center;
+} 
+
+#contactIcons > .iconBox > div > span {
+margin: 0;
+} 
+
+
 .iconBox {
     grid-row: 4;
     display: grid;
@@ -119,7 +129,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    opacity: .85;
+    opacity: .65;
     z-index: 2;
 }
 
@@ -147,7 +157,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    opacity: .85;
+    opacity: .65;
     z-index: 2;
 }
 
@@ -220,14 +230,40 @@
     overflow: hidden;
 }
 
-.grid4col > div > img {
+.grid4col > div > .halfImg {
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 200px;
     overflow: hidden;
 }
 
 .grid4col > div > * {
+    margin-top: 30px;
+}
+
+
+.grid2col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
+}
+/*
+.grid2col > div {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+}*/
+
+.grid2col > div > img {
+    object-fit: cover;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    /*grid-row: 1 / span 2;
+    grid-column: 1;*/
+}
+
+.grid2col > div > * {
     margin-top: 30px;
 }
 
@@ -252,6 +288,10 @@
 
     .topBg .iconBox img {
         margin: 0 auto 30px 0;
+    }
+
+    #contactIcons > .iconBox img {
+        margin: 0 auto 30px auto;
     }
 
     .overlapLeft > div {
@@ -445,6 +485,10 @@
 
     .bigBgWrapper2Left > form > div {
         margin: 0;
+    }
+
+    .grid2col {
+        grid-template-columns: 1fr;
     }
 
 }
