fixed mobile view if 3 icons are displayed on banners

--- a/banners.css
+++ b/banners.css
@@ -30,6 +30,10 @@
     background-image: url(img/about.jpg);
 }
 
+#accomodationbanner {
+    background-image: url(img/accomodation.jpg);
+}
+
 #auroraborealis {
     background-image: url(img/auroraborealis.jpg);
 }
