fixed contact bg

--- a/banners.css
+++ b/banners.css
@@ -39,7 +39,7 @@
 }
 
 #contact, #contactbanner {
-    background-image: url(img/contact.JPG);
+    background-image: url(img/contact.jpg);
 }
 
 #tripsbanner {
