--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@
     src: url("inter/Inter-Light-BETA.ttf");
 }
 
+/* --- colors --- */
+:root {
+    --blue:#202431;
+    --green: #3C957A;
+    --lightgreen: #5bbd9f;
+    --red: #FF6A6A;
+    --blueLifted: #40434E;
+    --blueLiftedLight: #666971;
+  }
+  
 body {
     background-color: #202431;
 }
