--- a/bucketlist/src/App.css
+++ b/bucketlist/src/App.css
@@ -403,7 +403,7 @@ footer .iconBox {
   width: 100%;
 }
 
-.appWrapper > h2, #popular > h2:nth-child(1), #activities > h2:nth-child(1), #suggestions > h2:nth-child(1) {
+.appWrapper > h2, #popular > h2:nth-child(1), #activities > div > h2:nth-child(1), #suggestions > h2:nth-child(1) {
   margin-top: 150px;
 }
 
