--- a/bucketlist/src/App.css
+++ b/bucketlist/src/App.css
@@ -364,6 +364,10 @@ footer .iconBox {
   margin: 0 0 25px 20px;
 }
 
+#bucketlistItems > p {
+  margin: 20px;
+}
+
 .listItem {
   display: grid;
   grid-gap: 10px;
