add to bucketlist works, responsive open/close bucketlist works

--- a/bucketlist/src/Customelements.css
+++ b/bucketlist/src/Customelements.css
@@ -393,7 +393,7 @@ margin: 0;
       }
 
     .onlyMobile {
-        display: block;
+        display: inline-block;
     }
 
     #mobileMenuWrapper {      
