--- a/bucketlist/src/App.css
+++ b/bucketlist/src/App.css
@@ -36,6 +36,13 @@ body {
   background: rgba(32, 36, 49, 0.5);
 }
 
+.onlyMobile {
+  display: none;
+}
+
+.hidden {
+  display: none;
+}
 
 nav > a {
   margin-top: 30px;
@@ -358,6 +365,7 @@ footer .iconBox {
   top: 0;
   left: 0;
   padding: 68px 0 20px 0;
+  overflow-y: auto;
 }
 
 .bucketlistWrapper > h3 {
@@ -377,7 +385,7 @@ footer .iconBox {
 }
 
 .listItem > img {
-  max-width: 100%;
+  width: 100%;
   height: 85px;
   object-fit: cover;
 }
@@ -397,7 +405,7 @@ footer .iconBox {
   font-family: "Inter-Light-BETA";
 }
 
-.bucketlistWrapper > .listItem:nth-child(2n+1){
+#bucketlistItems > .listItem:nth-child(2n+1){
   background-color: #666971;
 }
 /* ---- APP STUFF --- */
@@ -575,6 +583,7 @@ footer .iconBox {
       overflow: hidden;
       padding: 25px 0;
       transition: .3s ease-in-out;
+      overflow-y: auto;
   }
 
   .bucketlistWrapper > h3 {
