trolltunga site is ready

--- a/banners.css
+++ b/banners.css
@@ -81,3 +81,7 @@
 #countriesbanner {
     background-image: url(img/countries1.jpg);
 }
+
+#trolltungabanner {
+    background-image: url(img/trolltunga.png);
+}
