--- a/components.css
+++ b/components.css
@@ -62,8 +62,12 @@ margin: 0;
     margin: -150px 0;
     min-height: 100vh;
     height: auto;
+    pointer-events: none;
 }
 
+.bigBgContent > div {
+    pointer-events: auto;
+}
 .bigBgContent > * > .iconBox p {
     margin: 0;
     padding: 0;
