--- a/style.css
+++ b/style.css
@@ -34,10 +34,6 @@ button {
     transition: .3s ease-in-out;
 }
 
-button:hover, .button:hover {
-    background-color: rgb(255 255 255 / 10%);
-}
-
 .menu {
     position: fixed;
     top: 0;
@@ -346,3 +342,36 @@ footer .iconBox {
     justify-content: space-around;
 }
 
+/* temporary stuff
+.buttonWithIcon:hover {
+    animation: arrow 1s forwards
+}
+
+.buttonWithIcon:before {
+    content: "\f105";
+}
+
+@keyframes arrow {
+    0% {
+        transform: rotateX(45deg);
+    }
+} */
+
+.buttonHovered > i.fa-angle-right {
+transition: .3s ease-in-out;
+animation: rotate 1s infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(15px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
